--- a/BonfireApp/app/src/main/res/values/strings.xml
+++ b/BonfireApp/app/src/main/res/values/strings.xml
@@ -1,6 +1,62 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Bonfire</string>
 
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Bonfire</string>
+    <string name="search">Search</string>
+    <string name="add">Add</string>
+
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="location">Location</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="category">Category</string>
+
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+
+    <string name="defTime">Insert Time</string>
+    <string name="defDate">Insert Date</string>
+    <string name="defCategory">Choose Category</string>
+
+    <string-array name="category_arrays">
+        <item>Tech</item>
+        <item>Politics</item>
+        <item>Volunteers</item>
+        <item>Religion</item>
+        <item>Concert</item>
+        <item>Kids</item>
+        <item>Miscellaneous</item>
+    </string-array>
+
+    <string name="save">Save</string>
+    <string name="alert">* Required fields</string>
+
+    <string name="average">Average</string>
+
+    <string name="account_settings">Account Settings</string>
+    <string name="account_preferences">Account Preferences</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="user_name">User Name</string>
+    <string name="password">Password</string>
+    <string name="password_confirm">Confirm Password</string>
+    <string name="email">Email</string>
+    <string name="birthday">Birthday</string>
+    <string name="done">Done</string>
+    <string name="cancel">Cancel</string>
+    <string name="AppTitle">Bonfire</string>
+    <string name="login_button">Login</string>
+    <string name="signup_button">Sign Up</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_signup">Login</string>
+    <string name="title_activity_preferences">Preferences</string>
+    <string name="title_activity_home">Home</string>
+
+    <string name="facebook_login">Login with Facebook</string>
+
+    <string name="action_search">Search</string>
+
 </resources>
